--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/yuxin-yao-5097a0195/"
+  linkedin         : "yuxin-yao-5097a0195/"
   orcid            : "https://orcid.org/0000-0002-7356-5542"
   pinterest        :
   soundcloud       :
