--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    url: /files/PhD_CV.pdf
+    url: /files/YuxinYao_CV_2024.pdf
     
   # - title: "Guide"
   #   url: /markdown/
